# koda-agent

./: .env.example  .gitignore  .tmpBwvzqY.ai.py  .tmpZcGTkG.ai.py  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md  requirements-python-automation.txt  requirements-python-core.txt  requirements-python-dev.txt  requirements-python-ocr.txt
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
assets/: simphtml_find_main_list.js  simphtml_opt.js  tools_schema.json  tools_schema_cn.json
assets/tmwd_cdp_bridge/: background.js
config/: llms.example.toml
crates/koda-agent-cli/: Cargo.toml  build.rs
crates/koda-agent-cli/src/: main.rs  tui_full.rs
crates/koda-agent-cli/src/tui_full/: history.rs  markdown.rs  reducer.rs  render.rs  state.rs  tool_cards.rs
crates/koda-agent-cli/tests/: golden.rs
crates/koda-agent-core/: Cargo.toml
crates/koda-agent-core/src/: lib.rs  python_runtime.rs
crates/koda-agent-frontends/: Cargo.toml
crates/koda-agent-frontends/resources/: CHAT_HTML_ITERATIONS.md  chat.html
crates/koda-agent-frontends/src/: lib.rs
crates/koda-agent-llm/: Cargo.toml
crates/koda-agent-llm/src/: lib.rs
crates/koda-agent-memory/: Cargo.toml
crates/koda-agent-memory/src/: lib.rs
crates/koda-agent-tools/: Cargo.toml
crates/koda-agent-tools/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: browser-extension.md  configuration.md  installation.md  llm-config-cli-plan.zh.md  profile-model-config-plan.zh.md  python-runtime-strategy.md  release-notes.md  release.md  security.md  telegram-integration-plan.md  tui-implementation-plan.md  upstream-parity-alignment.md  workspace-home-model.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cli.zh.md  configuration.zh.md  quickstart.zh.md  release-checklist.zh.md  resources-memory.zh.md  tui.zh.md
memory/: chat_html_debug_sop.md  github_contribution_sop.md  subagent.md  vision_api.py
plan_composer_upgrade/: plan.md
plan_github_issues/: issues_raw.json  plan.md  pr_and_reply_plan.md
plan_session_render_optimization/: context.json  plan.md
plan_telegram_integration/: doc_structure_summary.txt  exploration_findings.md  plan.md
scripts/: audit-history.sh  audit-secrets.sh  doctor.ps1  doctor.sh  generate-manifest.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
