[workspace]
resolver = "3"
members = [
  "crates/koda-agent-core",
  "crates/koda-agent-llm",
  "crates/koda-agent-tools",
  "crates/koda-agent-memory",
  "crates/koda-agent-frontends",
  "crates/koda-agent-cli",
  "crates/xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/koda-claw/koda-agent"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dirs = "6"
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
once_cell = "1"
parking_lot = "0.12"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
ratatui = "0.29"
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

koda-agent-core = { path = "crates/koda-agent-core" }
koda-agent-llm = { path = "crates/koda-agent-llm" }
koda-agent-tools = { path = "crates/koda-agent-tools" }
koda-agent-memory = { path = "crates/koda-agent-memory" }
koda-agent-frontends = { path = "crates/koda-agent-frontends" }
