[package]
name = "koda-agent-cli"
version = "0.1.11"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "koda-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dotenvy.workspace = true
flate2.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
koda-agent-core.workspace = true
koda-agent-llm.workspace = true
koda-agent-tools.workspace = true
koda-agent-memory.workspace = true
koda-agent-frontends.workspace = true
reqwest.workspace = true
rpassword.workspace = true
ratatui.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true
zip.workspace = true
