[package]
name = "koda-agent-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
sha2.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
koda-agent-core.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
regex = "1.12.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
