[package]
name = "xtask"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
koda-agent-core.workspace = true
koda-agent-memory.workspace = true
koda-agent-tools.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
